# frand

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  appinfo.h  ci_string.h  display.cpp  display.h  frand.cpp  index.html  options.cpp  options.h  params.json  utility.cpp  utility.h  xplat.cpp  xplat.h
src/: appinfo.hpp.in  frand.cpp  options.cpp  options.hpp
